# Naive-Bayes-Number-Recognition

./: .gitignore  README.md  main.cpp
libbayes/src/: CMakeLists.txt  image.cpp  image.hpp  model.hpp  testing-model.cpp  testing-model.h  training-data.txt  training-model.cpp  training-model.h  validate-file.cpp  validate-file.h
libbayes/test/: CMakeLists.txt  test-classification.cpp  test-image.cpp  test-training.cpp  test-validate.cpp
